Downgrade .NET Framework from 4.6.1 to 4.5.2 and put fixed Dlls in the project

--- a/ExcelToEnumerable/ExcelToEnumerable.csproj
+++ b/ExcelToEnumerable/ExcelToEnumerable.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net461;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>net452;netstandard2.1</TargetFrameworks>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PackageId>ExcelToEnumerable</PackageId>
@@ -31,9 +31,17 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="All" />
-      <PackageReference Include="LightweightExcelReader" Version="0.1.13-alpha">
-      </PackageReference>
-      <PackageReference Include="SpreadsheetCellRef" Version="1.0.1" />
+    </ItemGroup>
+    <ItemGroup>
+      <Reference Include="LightweightExcelReader">
+        <HintPath>..\packages\LightweightExcelReader.dll</HintPath>
+      </Reference>
+      <Reference Include="SpreadsheetCellRef">
+        <HintPath>Deps\SpreadsheetCellRef.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Deps\" />
     </ItemGroup>
 
 
